--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,19 @@ version: "3.8"
 
 services:
   python_api:
+    container_name: python_api
     build: ./python_api
     restart: always
     environment:
       - RESTART_INTERVAL=10
+    ports:
+      - "5000:5000"
 
   node_api:
+    container_name: node_api
     build: ./node_api
     restart: always
     environment:
       - RESTART_INTERVAL=10
+    ports:
+      - "3000:3000"
