--- a/node_api/package.json
+++ b/node_api/package.json
@@ -6,6 +6,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
