--- a/python_api/requirements.txt
+++ b/python_api/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 pluggy==1.5.0
+pybreaker==1.2.0
 pytest==8.2.2
 requests==2.32.3
 urllib3==2.2.2
